data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_1976.wast
;; 7. **Block Type Misinterpretation Causing Execution to Unreachable**:    - Produce a `block` with a declared `blocktype` that mismatches actual operand types. Execute instructions that violate stack behavior, ultimately leading to the `unreachable` instruction due to incorrect context-induced types.

(assert_invalid
  (module (func $block-type-misinterpretation-unreachable (result i32)
    (block (result i32) (i64.const 0) (br 0))
  ))
  "type mismatch"
)